# langchain-agent

./: 1-localllm.py  10-functional-api2.py  11-functional-api3.py  12-mcp-client.py  13-agent-tools.py  14-agent-mcp-as-tool.py  16-interrupt.py  3-tool-calling.py  4-basic-chat.py  5-image-generation.py  6-prompt-enhancement.py  9-functional-api.py  README.md  pyproject.toml
agent/: chat_graph.py  client.py
agent/mcp/: config.py
agent/mcp_config/: config.py  mcp_config.json
data/: knowledge_base.json  knowledge_base.txt
generated_images/: image_20250610_054257.txt  image_20250610_055046.txt
graph/: chat.py
llms/: llama_local.py  openai_gpt_4o.py
mcp-server/: calculator.py  weater.py
scratch/langgraph/: 11-functional-api3.py  13-agent-tools.py  14-agent-mcp-as-tool.py  15-langgraph-route.py  16-interrupt.py  2-langchain-localllm.py  4-basic-chat.py  7-agentic-rag.py  8-search-agent.py
scratch/langgraph/data/chroma_db/: chroma.sqlite3
scratch/python/: 1_file_read.py  2_send_email.py  3_asyncio.py
scratch/python/data/: config.json  sample.md
