[project]
name = "langgraph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.3",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-ollama>=0.3.3",
    "langchain[openai]>=0.3.25",
    "langgraph[openai]>=0.4.8",
    "mcp>=1.9.4",
    "tiktoken>=0.9.0",
]
